[project]
name = "uwb-application-plan"
version = "0.1.0"
description = "UWB闸机交易方案设计与应用计划文档项目"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kewei@QLL", email = "ximing766@gmail.com"},
]
keywords = ["uwb", "documentation", "mkdocs", "闸机", "交易方案"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ximing766/UWB_Application_Plan.git"
Repository = "https://github.com/ximing766/UWB_Application_Plan.git"
Documentation = "https://github.com/ximing766/UWB_Application_Plan.git"
"Bug Tracker" = "https://github.com/ximing766/UWB_Application_Plan/issues"

[project.scripts]
uwb-docs = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
